# CountDown

./: .gitignore  README.md  app.py  countdown.db  counter.js  helpers.py  pyproject.toml  readme1.md
countdown/: app.py  routes.py
countdown/templates/: add_event.html  login.html  register.html
static/: styles.css
templates/: add_event.html  apology.html  history.html  home_page.html  layout.html  register.html
tests/: test_countdown.py
