[tool.poetry]
name = "countdown"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.1"
Flask-Session = "^0.3.1"
werkzeug = "0.16.0"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
autopep8 = "^1.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
